attempt to fix missing file issue

--- a/en/case-studies/detail/637/index.html
+++ b/en/case-studies/detail/637/index.html
@@ -128,7 +128,7 @@ theForm.elements[i].checked = status;
 <p> </p>
 <p>Downloadable Materials</p>
 <ul>
-<li><a href="../../../../userfiles/File//ClimateSmart%20Case%20Study%20FINAL2.pdf" target="_blank">Case Study PDF</a></li>
+<li><a href="../../../../userfiles/File/ClimateSmart Case Study FINAL2.pdf" target="_blank">Case Study PDF</a></li>
 <li>Webinar <a href="../../../../userfiles/Climate_Smart-transcript_FINAL.pdf" target="_blank">Transcript</a></li>
 <li>Webinar Handouts      <a href="../../../../userfiles/File//Handout_TOC_Highlights_2012_03_01_2pp.pdf" target="_blank">2 per page</a></li>
 </ul><!-- Results_A already contains p tags.-->
