--- a/en/case-studies/detail/658/index.html
+++ b/en/case-studies/detail/658/index.html
@@ -284,7 +284,7 @@ SmartTrips Program Specialist <br/>
 SmartTrips Program Specialist<br/>
 <a href="mailto:andrew.pelsma@portlandoregon.gov?subject=I%20saw%20your%20case%20study%20on%20Tools%20of%20Change">andrew.pelsma@portlandoregon.gov</a></p>
 <p><a href="http://www.portlandoregon.gov/transportation/4380" target="_blank">www.portlandoregon.gov/transportation/4380</a></p>
-<p><img alt="" height="140" src="../../../../userfiles/Image/Linda Bio Picture(1).JPG" width="142"/> <img alt="" height="140" src="../../../../userfiles/Image//DaniellePic.jpg" width="123"/> <img alt="" height="131" src="../../../../userfiles/Image//Andrew%20Bio%20Picture.jpg" width="269"/></p><!-- Contacts already contains P tags.-->
+<p><img alt="" height="140" src="../../../../userfiles/Image/Linda Bio Picture(1).JPG" width="142"/> <img alt="" height="140" src="../../../../userfiles/Image//DaniellePic.jpg" width="123"/> <img alt="" height="131" src="../../../../userfiles/Image/Andrew Bio Picture.jpg" width="269"/></p><!-- Contacts already contains P tags.-->
 <h2>Notes</h2>
 <p><strong>The first hurdle </strong></p>
 <p>"When you're looking to change people's travel behaviour, the first hurdle for people is to try something new. Just trying it is much more difficult than keeping it as a habit," said Ginenthal. "SmartTrips focus on customizing the message to the individual got new residents over that first hurdle."</p>
