--- a/en/case-studies/detail/665/index.html
+++ b/en/case-studies/detail/665/index.html
@@ -118,7 +118,7 @@ theForm.elements[i].checked = status;
 <p>The bins with feedback increased recycling rates significantly.</p>
 <p><em>Further Resources</em></p>
 <ul>
-<li><a href="../../../../userfiles/File//UGA%20Recycling%20Bin%20Feedback.pdf">Case study PDF</a> </li>
+<li><a href="../../../../userfiles/File/UGA Recycling Bin Feedback.pdf">Case study PDF</a> </li>
 </ul>
 <ul>
 <li>Webinar materials (includes other presentations too): <a href="../../../../userfiles/Handouts%20-%20May%209%20-2013.pdf" target="_blank">slide handouts</a> </li>
