--- a/en/case-studies/detail/678/index.html
+++ b/en/case-studies/detail/678/index.html
@@ -139,7 +139,7 @@ theForm.elements[i].checked = status;
 <p><em>Note: To minimize site maintenance costs, all case studies on this site are written in the past tense, even if they are ongoing</em><u><strong><em> as is the case with this particular program. </em></strong></u></p>
 <p>The Latino community living in the United States has been disproportionately affected by the intersecting epidemics of HIV and sexually transmitted diseases (STDs). In 2005, they had the second highest rate of AIDS diagnoses of all racial and ethnic groups in the United States, accounting for 20% of the total number of new AIDS cases reported (almost four times greater than for non-Latino Whites).</p>
 <p>Similarly, rates of reportable STDs were also higher among Latinos than among non-Latino Whites. In 2003, the rates of gonorrhea, chlamydia, and syphilis each were two to four times higher among Latinos than among non-Latino Whites. In 2004, HIV and STD infection rates for Latinos in North Carolina were three and four times that of non–Latino Whites, respectively.</p>
-<p><a href="../../../../userfiles/Image//Chatham%20Area%20Map.JPG"><img alt="Case study location" height="299" src="../../../../userfiles/Image//Chatham%20Area%20Map.JPG" width="450"/></a></p>
+<p><a href="../../../../userfiles/Image/Chatham Area Map.JPG"><img alt="Case study location" height="299" src="../../../../userfiles/Image/Chatham Area Map.JPG" width="450"/></a></p>
 <p>Map courtesy of mapcruzin.com</p><!-- Background already contains P tags.-->
 <h2>Setting Objectives</h2>
 <p>The overall goal of the project was to reduce the risk of HIV and STD infection through increased condom use and increased access to counseling, testing and treatment services for HIV and STDs.</p>
