--- a/en/case-studies/detail/710/index.html
+++ b/en/case-studies/detail/710/index.html
@@ -284,7 +284,7 @@ sean.wiedel@cityofchicago.org</p><!-- Contacts already contains P tags.-->
 <ul>
 <li>Having quirky, unique, and fun events was key to getting residents out walking and biking. Residents often had competing priorities for their time; organizing unique programming helped capture residents’ attention and encourage them to try something new. Go Pilsen, for example, organized a Market to Garden Bike Ride which included delicious drinks made by a bike-powered smoothie machine.</li>
 </ul>
-<p><img alt="" height="751" src="../../../../userfiles/Image/Star%20Party.png" width="450"/></p>
+<p><img alt="" height="751" src="../../../../userfiles/Image/Star Party.png" width="450"/></p>
 <p class="MsoNormal"> <span lang="EN-CA" style='font-size:8.0pt;font-family:"Minion Pro","serif";
 mso-ansi-language:EN-CA;mso-bidi-language:#0400'>Go Pilsen’s Star Party Bike Ride involved decorating bikes in glow-in-the-dark accessories and ending the ride with a telescope star-viewing party and lecture led by a local neighborhood astronomer.</span></p>
 <p class="MsoNormal"> </p>
