partway through check_complete_backup work

--- a/en/case-studies/detail/101/index.html
+++ b/en/case-studies/detail/101/index.html
@@ -139,7 +139,7 @@ theForm.elements[i].checked = status;
 <td width="100%"><img alt="Tip" complete="complete" height="26" src="/images/lightbulb.gif" width="27"/> Tip: Click on an image to enlarge it. Click your back button to return to this page. <hr color="#ffcc00"/>
 <p><a href="/images/documentimages/AQPortland/cartips.gif" target=""><img alt="Car care tips fact sheet" border="0" complete="complete" height="129" src="/images/documentimages/AQPortland/cartips1.gif"/></a> <br/>
             These fact sheets provided tips for preventing air pollution caused by cars.</p>
-<p><a href="/images/documentimages/AQPortland/prizedraw" target=""><img alt="Prize draw entry form" border="0" complete="complete" height="74" src="/images/documentimages/AQPortland/prizedraw1.gif"/></a> <br/>
+<p><a href="/images/documentimages/AQPortland/prizedraw.gif" target=""><img alt="Prize draw entry form" border="0" complete="complete" height="74" src="/images/documentimages/AQPortland/prizedraw1.gif"/></a> <br/>
             Prize draws were used as an incentive to participate in Clean Air Action Days.</p>
 </td>
 </tr>
