--- a/en/landmark/index.html
+++ b/en/landmark/index.html
@@ -429,7 +429,7 @@ theForm.elements[i].checked = status;
                 <ul>
 <li><em>Climate Change</em> (see bottom of this page)</li>
 <li><a href="../../en/topic-resources/energy-efficiency/landmark-case-studies-(energy)/"><em>Energy</em></a><em> </em>Conservation</li>
-<li><a href="../../en/topic-resources/transportation/landmark-case-studies-%28transportation%29/"><em>Transportation</em></a></li>
+<li><a href="../../en/topic-resources/transportation/landmark-case-studies-(transportation)/"><em>Transportation</em></a></li>
 </ul>
 </li>
 </ul>
