--- a/en/tools-of-change/mass-media/index.html
+++ b/en/tools-of-change/mass-media/index.html
@@ -120,22 +120,22 @@ theForm.elements[i].checked = status;
 <p>None of the Case Studies on this Web site provide a good illustration of this first situation. As one example, consider a campaign to promote a less expensive green product that is similar in every other way to traditional, less sustainable alternatives.</p>
 <p><strong>2. Minor barriers, no direct benefit </strong></p>
 <p>If the barriers are relatively minor but there is no clear, direct benefit to the person making the change, or if the benefit is not large enough to be taken seriously, you can use the mass media as one of a few key tools for bringing about the desired behaviour.</p>
-<p>For example, <a href="/English/CaseStudies/default.asp?ID=8">Get in the Loop - Buy Recycled</a> advertised extensively through the media to promote the purchase of recycled-content products. The other key element in its program was in-store prompts.</p>
+<p>For example, <a href="../../../en/case-studies/detail/8">Get in the Loop - Buy Recycled</a> advertised extensively through the media to promote the purchase of recycled-content products. The other key element in its program was in-store prompts.</p>
 <p>In situations with significant barriers, you will need to rely on a number of the other tools described in this Workbook. The media can nonetheless be very helpful in the following five situations.</p>
 <p><strong>3. To create receptivity to your program </strong></p>
 <p>If you need to raise awareness or provide basic information in order to promote receptivity to your program, consider the mass media.</p>
-<p>For example, <a href="/English/CaseStudies/default.asp?ID=15">JEEP</a> ran a broad public awareness campaign throughout its program. This ensured that the JEEP teams were not making cold calls and that the residents were already predisposed to hearing about the details of the program.</p>
-<p>In contrast, <a href="/English/CaseStudies/default.asp?ID=2">Be Water Wise</a> found that their public education program did not prepare residents adequately for the sale of subsidized water conservation retrofit kits during their 20-minute home visits.</p>
+<p>For example, <a href="../../../en/case-studies/detail/15">JEEP</a> ran a broad public awareness campaign throughout its program. This ensured that the JEEP teams were not making cold calls and that the residents were already predisposed to hearing about the details of the program.</p>
+<p>In contrast, <a href="../../../en/case-studies/detail/2">Be Water Wise</a> found that their public education program did not prepare residents adequately for the sale of subsidized water conservation retrofit kits during their 20-minute home visits.</p>
 <p><strong>4. To draw people to your program </strong></p>
 <p>If you want to draw people to an event, or notify them of an opportunity such as home visits or incentive programs, use the mass media.</p>
-<p>For example, <a href="/English/CaseStudies/default.asp?ID=20">ReCAP</a> found that 29 percent of home visit bookings came from newspaper articles, and that an additional 19 percent were from tax and utility bill inserts.</p>
+<p>For example, <a href="../../../en/case-studies/detail/20">ReCAP</a> found that 29 percent of home visit bookings came from newspaper articles, and that an additional 19 percent were from tax and utility bill inserts.</p>
 <p><strong>5. For seasonal reminders </strong></p>
 <p>If people are generally committed to doing the activity but have not done it for a while, a seasonal reminder through the media may prove helpful. For example, seasonal reminders can be used to promote putting out leaves for community-wide composting. The mulching of Christmas trees is another example.</p>
 <p><strong>6. To stimulate face-face conversations </strong></p>
 <p>A good media campaign can get people talking with one another about the issues and/or actions you are trying to promote. This can reinforce your use of the other Tools of Change.</p>
 <p><strong>7. To show participation and results </strong></p>
 <p>Once your program has gained participation and has started to show results, the mass media provide excellent opportunities for providing group feedback, strengthening norm appeals and building motivation.</p>
-<p>For example, <a href="/English/CaseStudies/default.asp?ID=19">Quinte Regional Recycling</a> provided positive feedback to its citizens through radio spots, video presentations on local television stations, and newspaper articles. These featured stories about citizens and local businesses that participated in the program and contributed to their community.</p>
+<p>For example, <a href="../../../en/case-studies/detail/19">Quinte Regional Recycling</a> provided positive feedback to its citizens through radio spots, video presentations on local television stations, and newspaper articles. These featured stories about citizens and local businesses that participated in the program and contributed to their community.</p>
 <p> </p>
 <h3>How Would You Use It?</h3>
 </div>
