--- a/en/tools-of-change/peer-support-groups/index.html
+++ b/en/tools-of-change/peer-support-groups/index.html
@@ -111,13 +111,13 @@ theForm.elements[i].checked = status;
 <h3>Why Would You Use It?</h3>
 <ul>
 <li>
-<p>Peer support groups can provide ongoing opportunities and support for applying most of the other tools of change. The tremendous potential of such person-to-person approaches has been well demonstrated for other topic areas by groups such as Alcoholics Anonymous, and for environmental citizenship by the <a href="/English/CaseStudies/default.asp?ID=9">Global Action Plan (GAP)</a>.</p>
+<p>Peer support groups can provide ongoing opportunities and support for applying most of the other tools of change. The tremendous potential of such person-to-person approaches has been well demonstrated for other topic areas by groups such as Alcoholics Anonymous, and for environmental citizenship by the <a href="../../../en/case-studies/detail/9">Global Action Plan (GAP)</a>.</p>
 </li>
 </ul>
 <p><a href="#notes">Note for health promoters.</a></p>
 <h3>When Would You Use It?</h3>
 <ul>
-<li>Consider using peer support groups when barriers to change are particularly high, or the actions you want to bring about are numerous or complex. One example is used, <a href="/English/CaseStudies/default.asp?ID=9">Global Action Plan</a>, which was founded in 1989 to preserve the earth's environment by helping people adopt "green habits."</li>
+<li>Consider using peer support groups when barriers to change are particularly high, or the actions you want to bring about are numerous or complex. One example is used, <a href="../../../en/case-studies/detail/9">Global Action Plan</a>, which was founded in 1989 to preserve the earth's environment by helping people adopt "green habits."</li>
 </ul>
 <h3>How Would You Use It?</h3>
 </div>
