--- a/en/tools-of-change/school-programs/index.html
+++ b/en/tools-of-change/school-programs/index.html
@@ -213,7 +213,7 @@ theForm.elements[i].checked = status;
 <div class="left_content_2col">
 <div class="plan_col_left">
 <h1>Examples</h1>
-<p>	Lochside School's program (<a href="../../../en/case-studies/detail/3">Bike Smarts</a>) had participants record the distances biked.</p> <p>Students at <a href="../../../en/case-studies/detail/25">Whitney Public School</a> weighed or counted the amount of each type of material they recycled and plotted the information on a graph.</p><p><a href="English/CaseStudies/default.asp?ID=9">Global Action Plan (GAP)</a> provided a place in the workbook for participants to record the actions they had taken at home.</p><p> <a href="../../../en/case-studies/detail/97">Greenest City</a> asked each participating school to report on the number of children involved in each activity, and the average distance travelled by participants to school.</p> </div>
+<p>	Lochside School's program (<a href="../../../en/case-studies/detail/3">Bike Smarts</a>) had participants record the distances biked.</p> <p>Students at <a href="../../../en/case-studies/detail/25">Whitney Public School</a> weighed or counted the amount of each type of material they recycled and plotted the information on a graph.</p><p><a href="en/case-studies/detail/9">Global Action Plan (GAP)</a> provided a place in the workbook for participants to record the actions they had taken at home.</p><p> <a href="../../../en/case-studies/detail/97">Greenest City</a> asked each participating school to report on the number of children involved in each activity, and the average distance travelled by participants to school.</p> </div>
 <!--/plan_col_left-->
 <div class="plan_col_right">
 <h1>Your Program</h1>
