--- a/en/tools-of-change/word-of-mouth/index.html
+++ b/en/tools-of-change/word-of-mouth/index.html
@@ -108,7 +108,7 @@ theForm.elements[i].checked = status;
 </ul>
 <h3>Why Would You Use It?</h3>
 <ul>
-<li>Word-of-mouth is often responsible for the bulk of learning about and adopting a new behaviour. For example, <a href="/English/CaseStudies/default.asp?ID=1">BC21 PowerSmart</a>, <a href="/English/CaseStudies/default.asp?ID=12">Guelph 2000</a>, <a href="/English/CaseStudies/default.asp?ID=20">ReCAP</a> and <a href="/English/CaseStudies/default.asp?ID=7">The Environment Network</a> all found that it was one of the main ways of getting bookings for their home visits. Furthermore, word-of-mouth is essentially free of charge.</li>
+<li>Word-of-mouth is often responsible for the bulk of learning about and adopting a new behaviour. For example, <a href="../../../en/case-studies/detail/1">BC21 PowerSmart</a>, <a href="../../../en/case-studies/detail/12">Guelph 2000</a>, <a href="../../../en/case-studies/detail/20">ReCAP</a> and <a href="../../../en/case-studies/detail/7">The Environment Network</a> all found that it was one of the main ways of getting bookings for their home visits. Furthermore, word-of-mouth is essentially free of charge.</li>
 </ul>
 <h3>When Would You Use It?</h3>
 <ul>
