--- a/fr/etudes-de-cas/detail/91/index.html
+++ b/fr/etudes-de-cas/detail/91/index.html
@@ -140,7 +140,7 @@ theForm.elements[i].checked = status;
 <td width="100%"><img alt="Tip" complete="complete" height="26" src="/images/lightbulb.gif" width="27"/> <small><font face="Verdana">Conseil: Cliquez sur cette image pour l'agrandir. Cliquez votre bouton "Back" pour retourner à ce page.</font></small><hr color="#FFCC00"/>
 <p><a href="/images/documentimages/AQPortland/cartips.gif" target=""><img alt="Car care tips fact sheet" border="0" complete="complete" height="129" src="/images/documentimages/AQPortland/cartips1.gif" width="100"/></a><br/>
 <small><font face="Verdana">These fact sheets provided tips for preventing air pollution caused by cars.</font></small></p>
-<p><a href="/images/documentimages/AQPortland/prizedraw" target=""><img alt="Prize draw entry form" border="0" complete="complete" height="74" src="/images/documentimages/AQPortland/prizedraw1.gif" width="100"/></a><br/>
+<p><a href="/images/documentimages/AQPortland/prizedraw.gif" target=""><img alt="Prize draw entry form" border="0" complete="complete" height="74" src="/images/documentimages/AQPortland/prizedraw1.gif" width="100"/></a><br/>
 <small><font face="Verdana">Prize draws were used as an incentive to participate in Clean Air Action Days.</font></small></p>
 </td>
 </tr>
